2004-07-06 13:25 Mike Park  <mike.park@nasa.gov>

	* src/restartTest.c Test program for GeoSDK restarts.

2004-07-06 11:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) added function to
	test CAD Parameters and projection XYS's.

2004-07-01 11:25 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomExtras.c added mock UG_REFINE. 
	fixed UGPatch_Parent to allocate ugrid. 
	made GeoMesh_UseDefaultIOCallbacks a function.
	renamed GeoMesh_SavePart to CADGeom_SavePart.
	
2004-07-01 10:40 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridCreateShellFromFaces) added to call 
	CADTopo_AssembleTShell to create shell of volume ugrid.
	* src/gridfortran.c (gridcreateshellfromfaces_) gridCreateShellFromFaces
	* src/FAKEGeomExtras.c added mock CADGeom_UpdateFaceGrid 
	UGPatch_Parent CADTopo_ShellStats CADTopo_AssembleTShell.

2004-06-30 11:23 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) called MeshMgr_Initialize.
	This call should be removed after Bill Jones and I remove the
	need to activate the background source functions.
	* src/FAKEGeomExtras.c added mock MeshMgr_Initialize UG_UNKNOWN.
	removed unneeded UGrid_BuildConnectivity.

2004-06-29 14:33 Mike Park  <mike.park@nasa.gov>

	* Made 0.7.5 Release. new GeoSDK UG_API implementation.

2004-06-29 12:55 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridUpdateGeometryFace) set the face UGrid
	* src/gridgeom.c (gridParallelGeomSave) calls CADGeom_SavePart now.
	* src/FAKEGeomExtras.c added mock CADGeom_SetFaceGrid
	CADGeom_UseDefaultIOCallbacks CADGeom_SavePart

2004-06-29 11:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridupdategeometryface_) gridUpdateGeometryFace
	* src/gridgeom.c (gridUpdateGeometryFace) for updating GeoSDK faces.
	* src/FAKEGeomExtras.c added mock UGrid_FromArrays UGrid_FlagValue
	UGrid_BuildConnectivity UGPatch_InitSurfacePatches UGrid_TIMESTAMP
	UGrid_ALGORITHM

2004-06-28 16:55 Mike Park  <mike.park@nasa.gov>
